@@ -1,4 +1,7 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2007/09/15 09:43:32 agc Exp $
+@comment $NetBSD$
 bin/pcc
 libexec/ccom
 libexec/cpp
+man/man1/ccom.1
+man/man1/cpp.1
+man/man1/pcc.1
