@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2007/09/21 22:55:46 reed Exp $
+$NetBSD: distinfo,v 1.3 2007/09/21 23:16:39 reed Exp $
 
-SHA1 (pcc-0.9.8-070912.tgz) = a3162c1139b865d2f9ce50f0dd161ee4061f2460
-RMD160 (pcc-0.9.8-070912.tgz) = 92fa1c920458fa5ccabe76f427ec48296effad27
-Size (pcc-0.9.8-070912.tgz) = 299675 bytes
+SHA1 (pcc-0.9.9.tgz) = 061b4bd82711d9c72a5889e6b5f38582758da5f7
+RMD160 (pcc-0.9.9.tgz) = 197012fe1c1416320cddd6df9c3eb8116a805ca4
+Size (pcc-0.9.9.tgz) = 426471 bytes
